# OS_KR

./: .gitignore  CMakeLists.txt  README.md
src/: fibonacci.cpp  fibonacci.h  linked_list.cpp  main.cpp  palindrome.cpp  palindrome.h
tests/: test_fibonacci.cpp  test_palindrome.cpp
